Performance improvements https://github.com/refinedmods/refinedstorage2/issues/1206#issuecomment-4466434544